<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="@dimen/imageView"
        android:layout_height="@dimen/imageView"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/imageView_layout_marginTop"
        android:src="@drawable/ico_144_144a"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:drawableLeft="@drawable/lock"
        android:drawableRight="@drawable/close"
        android:password="true"
        android:hint="@string/editText_hint"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:id="@+id/btn_login"
        android:background="@drawable/button_enable"
        android:text="@string/text_login"
        android:enabled="false"
        android:textColor="@color/button_text_white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/textView_marginTop"
        android:text="@string/text_issue"
        android:textColor="@color/textView_bottom"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/imageView_layout_marginTop"
        android:text="@string/text_more"
        android:textColor="@color/textView_bottom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_goto1"
        android:text="goto1"/>

    <Button
        android:id="@+id/btn_goto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="goto2" />
</LinearLayout>